--- a/APIDatVe/APIDatVe/Web.config
+++ b/APIDatVe/APIDatVe/Web.config
@@ -95,8 +95,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DB" connectionString="metadata=res://*/Database.DB.csdl|res://*/Database.DB.ssdl|res://*/Database.DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G20K8NI\ANONYMOUS;initial catalog=QLDatVe;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="DB" connectionString="metadata=res://*/Database.DB.csdl|res://*/Database.DB.ssdl|res://*/Database.DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G20K8NI\ANONYMOUS;initial catalog=QLDatVe2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
