--- a/APIDatVe/APIDatVe/APIDatVe.csproj
+++ b/APIDatVe/APIDatVe/APIDatVe.csproj
@@ -226,6 +226,9 @@
     <Compile Include="DAL\KhachHangDAL.cs" />
     <Compile Include="DAL\TaiKhoanDAL.cs" />
     <Compile Include="DAL\TrangThaiGheDAL.cs" />
+    <Compile Include="Database\APIQuanLy.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Database\BangGia.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -286,7 +289,13 @@
     <Compile Include="Database\NhanVien.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Database\NhomAPI.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Database\Quyen.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\QuyenAPIQuanLy.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Database\QuyenManHinhQuanLy.cs">
