--- a/APIDatVe/APIDatVe/APIDatVe.csproj
+++ b/APIDatVe/APIDatVe/APIDatVe.csproj
@@ -224,6 +224,7 @@
     <Compile Include="DAL\DatVe\DiemTrungChuyenDAL.cs" />
     <Compile Include="DAL\DatVe\KhachHangDAL.cs" />
     <Compile Include="DAL\DatVe\ChuyenXeDAL.cs" />
+    <Compile Include="DAL\DatVe\VeXeDAL.cs" />
     <Compile Include="DAL\PhuXe\ChuyenXeDAL.cs" />
     <Compile Include="DAL\PhuXe\DiemTrungChuyenDAL.cs" />
     <Compile Include="DAL\PhuXe\GheDAL.cs" />
@@ -349,6 +350,7 @@
     <Compile Include="DTO\DatVe\DiemTrungChuyenDTO.cs" />
     <Compile Include="DTO\DatVe\KhachHangDTO.cs" />
     <Compile Include="DTO\DatVe\LoTrinhDTO.cs" />
+    <Compile Include="DTO\DatVe\VeXeDTO.cs" />
     <Compile Include="DTO\PhuXe\ChuyenXeDTO.cs" />
     <Compile Include="DTO\PhuXe\DiemTrungChuyenDTO.cs" />
     <Compile Include="DTO\PhuXe\GheDTO.cs" />
