update api get schema car  by carid and tripID

--- a/APIDatVe/APIDatVe/APIDatVe.csproj
+++ b/APIDatVe/APIDatVe/APIDatVe.csproj
@@ -164,6 +164,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\DatVe\DatVeController.cs" />
     <Compile Include="API\DatVe\DiemTrungChuyen1Controller.cs" />
     <Compile Include="API\DatVe\KhachHangController.cs" />
     <Compile Include="API\DatVe\ChuyenXe1Controller.cs" />
@@ -346,11 +347,14 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DTO\DatVe\BangGiaDTO.cs" />
+    <Compile Include="DTO\DatVe\ChiTietVeXeDTO.cs" />
     <Compile Include="DTO\DatVe\ChuyenXeDTO.cs" />
     <Compile Include="DTO\DatVe\DiemTrungChuyenDTO.cs" />
+    <Compile Include="DTO\DatVe\GheDTO.cs" />
     <Compile Include="DTO\DatVe\KhachHangDTO.cs" />
     <Compile Include="DTO\DatVe\LoTrinhDTO.cs" />
     <Compile Include="DTO\DatVe\VeXeDTO.cs" />
+    <Compile Include="DTO\DatVe\XeDTO.cs" />
     <Compile Include="DTO\PhuXe\ChuyenXeDTO.cs" />
     <Compile Include="DTO\PhuXe\DiemTrungChuyenDTO.cs" />
     <Compile Include="DTO\PhuXe\GheDTO.cs" />
