--- a/APIDatVe/APIDatVe/APIDatVe.csproj
+++ b/APIDatVe/APIDatVe/APIDatVe.csproj
@@ -174,15 +174,23 @@
     <Compile Include="API\PhuXe\TaiKhoanController.cs" />
     <Compile Include="API\PhuXe\TrangThaiGheController.cs" />
     <Compile Include="API\QuanLy\APIBangGiaController.cs" />
+    <Compile Include="API\QuanLy\APIChiTietLoTrinhController.cs" />
     <Compile Include="API\QuanLy\APIChucVuController.cs" />
+    <Compile Include="API\QuanLy\APIChuyenXeController.cs" />
+    <Compile Include="API\QuanLy\APIDatXeController.cs" />
     <Compile Include="API\QuanLy\APIDiemTrungChuyenController.cs" />
     <Compile Include="API\QuanLy\APIDoiTuongController.cs" />
     <Compile Include="API\QuanLy\APIGheController.cs" />
     <Compile Include="API\QuanLy\APIKipController.cs" />
     <Compile Include="API\QuanLy\APILoTrinhController.cs" />
+    <Compile Include="API\QuanLy\APINhanVienController.cs" />
+    <Compile Include="API\QuanLy\APIPhanQuyenController.cs" />
+    <Compile Include="API\QuanLy\APIQuyenController.cs" />
+    <Compile Include="API\QuanLy\APITaiKhoanController.cs" />
     <Compile Include="API\QuanLy\APITinhThanhController.cs" />
     <Compile Include="API\QuanLy\APIXeController.cs" />
     <Compile Include="API\QuyenTruyCap\AcceptAction.cs" />
+    <Compile Include="API\QuyenTruyCap\APILoginController.cs" />
     <Compile Include="API\QuyenTruyCap\BaseAuthenticationAttribute.cs" />
     <Compile Include="API\QuyenTruyCap\UserSecurity.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -238,6 +246,7 @@
     <Compile Include="Database\BangGia.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Database\ChiTietHoatDongXe.cs" />
     <Compile Include="Database\ChiTietLaiXe.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -256,6 +265,7 @@
     <Compile Include="Database\DanhGia.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Database\DiemChungChuyen.cs" />
     <Compile Include="Database\DiemTrungChuyen.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -307,24 +317,6 @@
     <Compile Include="Database\QuyenManHinhQuanLy.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Database\sp_gettripbytripId_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Database\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Database\sp_helpdiagrams_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Database\sp_laythongtingiave_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Database\sp_listdiemtrungchuyen_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Database\sp_search_customerbyusername_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Database\sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -370,6 +362,9 @@
     <Compile Include="Helper\DataHelper.cs" />
     <Compile Include="Helper\Encode.cs" />
     <Compile Include="Helper\MailHelper.cs" />
+    <Compile Include="Helper\TrangThaiGhe.cs" />
+    <Compile Include="Models\EGhe.cs" />
+    <Compile Include="Models\ENhanVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response\ApiBase.cs" />
     <Compile Include="Response\ResponseDefault.cs" />
@@ -448,7 +443,6 @@
   <ItemGroup>
     <Folder Include="API\Quyen\" />
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
