lien update api

--- a/APIDatVe/APIDatVe/APIDatVe.csproj
+++ b/APIDatVe/APIDatVe/APIDatVe.csproj
@@ -171,6 +171,7 @@
     <Compile Include="API\PhuXe\ChuyenXeController.cs" />
     <Compile Include="API\PhuXe\DiemTrungChuyenController.cs" />
     <Compile Include="API\PhuXe\GheController.cs" />
+    <Compile Include="API\PhuXe\PhuXeDatVeController.cs" />
     <Compile Include="API\PhuXe\TaiKhoanController.cs" />
     <Compile Include="API\PhuXe\TrangThaiGheController.cs" />
     <Compile Include="API\QuanLy\APIBangGiaController.cs" />
@@ -235,6 +236,7 @@
     <Compile Include="DAL\DatVe\ChuyenXeDAL.cs" />
     <Compile Include="DAL\DatVe\VeXeDAL.cs" />
     <Compile Include="DAL\PhuXe\ChuyenXeDAL.cs" />
+    <Compile Include="DAL\PhuXe\DatVeDAL.cs" />
     <Compile Include="DAL\PhuXe\DiemTrungChuyenDAL.cs" />
     <Compile Include="DAL\PhuXe\GheDAL.cs" />
     <Compile Include="DAL\PhuXe\KhachHangDAL.cs" />
@@ -348,7 +350,9 @@
     <Compile Include="DTO\DatVe\LoTrinhDTO.cs" />
     <Compile Include="DTO\DatVe\VeXeDTO.cs" />
     <Compile Include="DTO\DatVe\XeDTO.cs" />
+    <Compile Include="DTO\PhuXe\BangGiaDTO.cs" />
     <Compile Include="DTO\PhuXe\ChuyenXeDTO.cs" />
+    <Compile Include="DTO\PhuXe\DatVeDTO.cs" />
     <Compile Include="DTO\PhuXe\DiemTrungChuyenDTO.cs" />
     <Compile Include="DTO\PhuXe\GheDTO.cs" />
     <Compile Include="DTO\PhuXe\KhachHangDTO.cs" />
