add api customer feedback trip

--- a/APIDatVe/APIDatVe/APIDatVe.csproj
+++ b/APIDatVe/APIDatVe/APIDatVe.csproj
@@ -346,6 +346,7 @@
     <Compile Include="DTO\DatVe\ChuyenXeDTO.cs" />
     <Compile Include="DTO\DatVe\DiemTrungChuyenDTO.cs" />
     <Compile Include="DTO\DatVe\GheDTO.cs" />
+    <Compile Include="DTO\DatVe\KhachHangDanhGiaDTO.cs" />
     <Compile Include="DTO\DatVe\KhachHangDatVeDTO.cs" />
     <Compile Include="DTO\DatVe\KhachHangDTO.cs" />
     <Compile Include="DTO\DatVe\LoTrinhDTO.cs" />
